--- a/versions/debug's/sidebar.html
+++ b/versions/debug's/sidebar.html
@@ -45,38 +45,38 @@
         <div class="flex flex-col w-full px-2 space-y-2">
             
             <!-- Item: Início -->
-            <a href="#" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Página Inicial">
+            <a href="../../index.php" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Página Inicial">
                 <i data-lucide="home" class="w-7 h-7 stroke-[2]"></i>
                 <span class="ml-4 text-lg font-medium sidebar-label">Página Inicial</span>
             </a>
 
             <!-- Item: Pesquisar -->
-            <a href="#" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Pesquisar">
+            <a href="../../pages/pesquisar_nseifazrisso.html" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Pesquisar">
                 <i data-lucide="search" class="w-7 h-7 stroke-[2]"></i>
                 <span class="ml-4 text-lg font-medium sidebar-label">Pesquisar</span>
             </a>
 
             <!-- Item: Novo Post -->
-            <a href="#" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Novo Post">
+            <a href="../../pages/criar_post.html" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Novo Post">
                 <i data-lucide="plus-square" class="w-7 h-7 stroke-[2]"></i>
                 <span class="ml-4 text-lg font-medium sidebar-label">Novo Post</span>
             </a>
 
             <!-- Item: Notificações -->
-            <a href="#" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Notificações">
+            <a href="../../pages/notificacoes.html" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Notificações">
                 <i data-lucide="heart" class="w-7 h-7 stroke-[2]"></i>
                 <span class="ml-4 text-lg font-medium sidebar-label">Notificações</span>
             </a>
 
             <!-- Item: Comunidades -->
-            <a href="#" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Comunidades">
+            <a href="../../pages/comunidades.html" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Comunidades">
                 <i data-lucide="users" class="w-7 h-7 stroke-[2]"></i>
                 <span class="ml-4 text-lg font-medium sidebar-label">Comunidades</span>
             </a>
 
             <!-- Item: Perfil (ATIVO) -->
             <!-- Nota: Adicionei classes bg-[#202020] e text-white para indicar que está ativo -->
-            <a href="#" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-white bg-[#202020] justify-center group nav-item" title="Perfil">
+            <a href="../../pages/perfil.php" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-white bg-[#202020] justify-center group nav-item" title="Perfil">
                 <i data-lucide="user-circle-2" class="w-7 h-7 stroke-[2.5]"></i>
                 <span class="ml-4 text-lg font-medium sidebar-label">Perfil</span>
             </a>
@@ -86,7 +86,7 @@
         <div class="flex flex-col w-full px-2 space-y-2 mb-2">
             
             <!-- Botão Sair -->
-            <a href="#" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Sair">
+            <a href="../../php/sair.php" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Sair">
                 <i data-lucide="log-out" class="w-7 h-7 stroke-[2]"></i>
                 <span class="ml-4 text-lg font-medium sidebar-label">Sair</span>
             </a>
