--- a/pages/pesquisar_nseifazrisso.html
+++ b/pages/pesquisar_nseifazrisso.html
@@ -155,7 +155,7 @@
                 </div>
 
                 <!-- Botão GitHub Documentation -->
-                <a href="#" class="mt-12 flex items-center gap-4 px-8 py-5 bg-[#1E1E1E] border border-[#333] rounded-xl text-white hover:bg-[#2a2a2a] hover:border-white/30 transition-all duration-300 group shadow-xl">
+                <a href="https://github.com/emanuecaIFFar/IFFed/tree/main" class="mt-12 flex items-center gap-4 px-8 py-5 bg-[#1E1E1E] border border-[#333] rounded-xl text-white hover:bg-[#2a2a2a] hover:border-white/30 transition-all duration-300 group shadow-xl">
                     <i data-lucide="github" class="w-8 h-8 text-white group-hover:scale-110 transition-transform duration-300"></i>
                     <span class="font-medium text-lg">Acesse a documentação do IFeed agora mesmo!</span>
                 </a>
