--- a/pages/criar_post.html
+++ b/pages/criar_post.html
@@ -121,17 +121,17 @@
             <div class="w-full max-w-2xl bg-[#1E1E1E] border border-[#333] rounded-2xl overflow-hidden shadow-2xl">
                 
                 <!-- PHP Form -->
-                <form action="process_post.php" method="POST" enctype="multipart/form-data" class="w-full">
+                <form action="../php/create_post.php" method="POST" enctype="multipart/form-data" class="w-full">
                     
                     <!-- Cabeçalho do Card (Usuário) -->
                     <div class="flex items-center p-6 pb-2">
                         <div class="w-12 h-12 rounded-full overflow-hidden border-2 border-[#333] mr-4">
-                            <img src="https://picsum.photos/id/64/200/200" alt="User Avatar" class="w-full h-full object-cover">
+                            <img id="criar-avatar" src="../assets_front/img/padrao.jpg" alt="User Avatar" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='../assets_front/img/padrao.jpg';">
                         </div>
                         <div>
-                            <p class="text-white font-semibold text-lg">Carlos Eduardo</p>
+                            <p id="criar-username" class="text-white font-semibold text-lg">Carregando...</p>
                             <div class="flex items-center gap-2">
-                                <span class="text-[#888] text-sm">@carlos_ifeed</span>
+                                <span id="criar-handle" class="text-[#888] text-sm">@usuario</span>
                                 <span class="text-[#444] text-xs">•</span>
                                 <div class="flex items-center text-[#888] text-xs bg-[#2a2a2a] px-2 py-0.5 rounded-full border border-[#333] cursor-pointer hover:text-white transition-colors">
                                     <i data-lucide="globe" class="w-3 h-3 mr-1"></i>
@@ -144,7 +144,8 @@
                     <!-- Área de Texto -->
                     <div class="px-6 py-2">
                         <textarea 
-                            name="post_content" 
+                            name="conteudo" 
+                            id="conteudo"
                             rows="4" 
                             placeholder="No que você está pensando hoje?" 
                             class="w-full bg-transparent text-white text-xl placeholder-[#555] border-none focus:ring-0 resize-none outline-none leading-relaxed scrollbar-none"
@@ -171,7 +172,7 @@
                         <div class="flex items-center space-x-2">
                             <!-- Imagem Upload -->
                             <div class="relative group">
-                                <input type="file" id="imageUpload" name="post_image" accept="image/*" class="hidden" onchange="previewMedia(event, 'image')">
+                                <input type="file" id="imageUpload" name="imagem" accept="image/*" class="hidden" onchange="previewMedia(event, 'image')">
                                 <label for="imageUpload" class="p-2.5 text-[#a8a8a8] hover:text-[#4ADE80] hover:bg-[#4ADE80]/10 rounded-full cursor-pointer transition-all flex items-center justify-center" title="Adicionar Foto">
                                     <i data-lucide="image" class="w-6 h-6"></i>
                                 </label>
@@ -268,6 +269,22 @@
             imageInput.value = '';
             videoInput.value = '';
         });
+    </script>
+    <script>
+    // Preenche avatar e nome do usuário logado no form de criação de post
+    fetch('../php/get_session_user.php', { credentials: 'same-origin' })
+        .then(r => r.json())
+        .then(json => {
+            if (json.success && json.data) {
+                const u = json.data;
+                const avatar = document.getElementById('criar-avatar');
+                const nome = document.getElementById('criar-username');
+                const handle = document.getElementById('criar-handle');
+                if (avatar) avatar.src = u.foto_url;
+                if (nome) nome.textContent = u.nome;
+                if (handle) handle.textContent = '@' + (u.nome.toLowerCase().replace(/\s+/g, '_'));
+            }
+        }).catch(()=>{});
     </script>
 </body>
 </html>
