--- a/pages/comunidades.html
+++ b/pages/comunidades.html
@@ -86,7 +86,7 @@
             </a>
 
             <!-- Notificações -->
-            <a href="notificacoes.html" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Notificações">
+            <a href="notificacoes.php" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Notificações">
                 <i data-lucide="heart" class="w-7 h-7 stroke-[2]"></i>
                 <span class="ml-4 text-lg font-medium sidebar-label">Notificações</span>
             </a>
