--- a/pages/criar_post.html
+++ b/pages/criar_post.html
@@ -74,7 +74,7 @@
             </a>
 
             <!-- Notificações -->
-            <a href="notificacoes.html" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Notificações">
+            <a href="notificacoes.php" class="flex items-center h-[60px] w-full rounded-lg transition-colors duration-200 text-[#a8a8a8] hover:bg-[#181818] hover:text-white justify-center group nav-item" title="Notificações">
                 <i data-lucide="heart" class="w-7 h-7 stroke-[2]"></i>
                 <span class="ml-4 text-lg font-medium sidebar-label">Notificações</span>
             </a>
@@ -126,7 +126,7 @@
                     <!-- Cabeçalho do Card (Usuário) -->
                     <div class="flex items-center p-6 pb-2">
                         <div class="w-12 h-12 rounded-full overflow-hidden border-2 border-[#333] mr-4">
-                            <img id="criar-avatar" src="../assets_front/img/padrao.jpg" alt="User Avatar" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='../assets_front/img/padrao.jpg';">
+                            <img id="criar-avatar" src="../assets/img/padrao.jpg" alt="User Avatar" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='../assets/img/padrao.jpg';">
                         </div>
                         <div>
                             <p id="criar-username" class="text-white font-semibold text-lg">Carregando...</p>
